--- a/main.css
+++ b/main.css
@@ -42,7 +42,7 @@ header h2{
   height: 80%;
 }
 #shopping_cart_image{
-  background-image:url('http://www.todayifoundout.com/wp-content/uploads/2015/12/shopping-cart.png');
+  background-image:url('GroceryCart.jpg');
   background-position: center;
   background-size: cover;
 
@@ -128,6 +128,35 @@ footer{
   border:1px solid black;
   margin-top: 10px;
   max-width: 350px;
+}
+#recipe_list li:hover{
+  background-color: rgb(52, 146, 52);
+  color:black;
+  cursor: pointer;
+}
+#recipe_list{
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  transition: .5s;
+  width: 80%;
+  margin-right: auto;
+  margin-left: auto;
+  border:1px solid black;
+  margin-top: 10px;
+  max-width: 350px;
+}
+#recipe_list ul{
+  padding-left: 20px;
+  margin-top: 3px;
+}
+#recipe_list li{
+  font-size: 13px;
+  margin:20px;
+}
+
+#recipe_list h5{
+  padding: 5px;
 }
 #grocery_list ul{
   padding-left: 20px;
@@ -284,3 +313,45 @@ h4{
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+
+
+
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
