--- a/main.css
+++ b/main.css
@@ -8,9 +8,13 @@ html{
   height: 100%;
 }
 body{
-  
+  background-image: url('https://backgrounddownload.com/wp-content/uploads/2018/09/background-for-food-website-3.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+
   display: flex;
   flex-direction: column;
+  align-content: center;
   
 }
 #arrowback{
@@ -31,9 +35,11 @@ header{
   color:rgba(235, 235, 235, 0.993);
   background-color: #1FA517;
   font-size: 18px;
-  width: 100%;
+  width: 50%;
   display: flex;
   justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 header h2{
   display: block;
@@ -42,9 +48,9 @@ header h2{
   height: 80%;
 }
 #shopping_cart_image{
-  background-image:url('https://previews.123rf.com/images/creativenature/creativenature1511/creativenature151100052/48926764-grocery-cart-at-a-supermarket-aisle-filled-up-with-food-products-seen-from-the-customers-point-of-vi.jpg');
+  /* background-image:url('https://previews.123rf.com/images/creativenature/creativenature1511/creativenature151100052/48926764-grocery-cart-at-a-supermarket-aisle-filled-up-with-food-products-seen-from-the-customers-point-of-vi.jpg');
   background-position: center;
-  background-size: cover;
+  background-size: cover; */
 
   width: 100%;
   height: 280px;
@@ -55,8 +61,9 @@ header h2{
 #shopping_cart_image button{
   width: 127px;
   height: 35px;
-  background-color:rgba(211, 211, 211, 0.89);
-  color:rgb(34, 34, 34);
+  background-color:rgba(255, 255, 255, 0);
+  color: white;
+  border:1px solid  rgb(255, 255, 255);
   border-radius: 10px;
   font-size: 16px;
   font-weight: normal;
@@ -68,19 +75,27 @@ header h2{
   color :rgba(235, 235, 235, 0.993);
 }
 main{
+ 
+
   color:#8F8F8F;
   display: flex;
   flex-direction: column;
   justify-content: center;
   height: 200px;
   flex-grow: 1;
+  
 }
 main p{
   width: 70%;
   align-self: center;
   text-align: center;
+  margin-top: auto;
+  margin-bottom: auto;
   padding-top: 5%;
   padding-bottom: 5%;
+  color:rgb(0, 255, 0);
+  background-color:rgba(138, 138, 138, 0.705);
+  font-size: 18px;
 }
 main i{
   color: #1FA517;
@@ -110,11 +125,13 @@ footer{
   position: fixed;
   margin-top: 40px;
   bottom:0;
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
   
   height:42px;
   width: 100%;
-  background-color: #CBCBCB;
+  background-color: rgba(203, 203, 203, 0.473);
 
 }
 .link{
@@ -136,6 +153,8 @@ footer{
   border:1px solid black;
   margin-top: 10px;
   max-width: 350px;
+  background-color: rgba(255, 255, 255, 0.938);
+  
 }
 #recipe_list li:hover{
   background-color: rgb(52, 146, 52);
@@ -153,6 +172,7 @@ footer{
   border:1px solid black;
   margin-top: 10px;
   max-width: 350px;
+  background-color: rgba(255, 255, 255, 0.938);
 }
 #recipe_list ul{
   padding-left: 20px;
@@ -247,6 +267,13 @@ section{
   height:100%;
   display: flex;
   flex-direction: column;
+  background-color: rgba(90, 90, 90, 0.479);
+  color:rgb(0, 255, 0);
+}
+#js-form h4{
+  background-color: rgba(255, 255, 255, 0.445);
+  color:white;
+  
 }
 #top_category_title{
   margin-top:0px;
