--- a/main.css
+++ b/main.css
@@ -254,6 +254,15 @@ fieldset{
   margin-bottom:20px;
   width: 150px;
   height: 50px;;
+  background-color: rgba(255, 255, 255, 0);
+  border: 1px solid rgb(0, 255, 0);
+  color:rgb(0, 255, 0);
+  transition: .5s;
+
+}
+#cat_button:hover{
+  background-color: green;
+  color:white;
 }
 
 .hidden{
