--- a/main.css
+++ b/main.css
@@ -4,22 +4,6 @@
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
 }
-label{
-  width: 20%;
-  margin-left: auto;
-  margin-right: auto;
-
-}
-label:hover{
-  color: white;
-  
-}
-label:focus{
-  background-color: white;
-}
-label::after{
-  background-color: white;
-}
 html{
   height: 100%;
 }
@@ -51,17 +35,22 @@ header{
   color:rgba(235, 235, 235, 0.993);
   background-color: #1FA517;
   font-size: 18px;
-  width: 80%;
+  width: 50%;
   display: flex;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
+}
+img{
+  height: 100%;
+  width: 100%;
 }
 header h2{
   display: block;
   margin-top: auto;
   margin-bottom: auto;
   height: 80%;
+  font-size: 17px;
 }
 #shopping_cart_image{
   /* background-image:url('https://previews.123rf.com/images/creativenature/creativenature1511/creativenature151100052/48926764-grocery-cart-at-a-supermarket-aisle-filled-up-with-food-products-seen-from-the-customers-point-of-vi.jpg');
@@ -215,7 +204,6 @@ footer{
 }
 #grocery_list h5{
   padding:5px;
-  
 }
 
 #bottom_box{
@@ -289,6 +277,17 @@ fieldset{
 section{
   
 }
+.list_nut{
+  font-size:12px;
+  font-style: italic;
+  padding-left: 20px;
+}
+#myModal h3{
+  margin:10px;
+}
+#recipe_ingredients_landing{
+  padding-left: 25px;
+}
 #js-form{
   height:100%;
   display: flex;
@@ -299,7 +298,6 @@ section{
 #js-form h4{
   background-color: rgba(255, 255, 255, 0.445);
   color:white;
-  text-align: center;
   
 }
 #top_category_title{
@@ -342,14 +340,12 @@ h4{
   left: 0;
   height: 25px;
   width: 25px;
-  margin-left:auto;
-  margin-right: auto;
-  /* background-color: #eee; */
+  background-color: #eee;
 }
 
 /* On mouse-over, add a grey background color */
 .container:hover input ~ .checkmark {
-  /* background-color: #ccc; */
+  background-color: #ccc;
 }
 
 /* When the checkbox is checked, add a blue background */
