--- a/main.css
+++ b/main.css
@@ -294,6 +294,9 @@ section{
   flex-direction: column;
   background-color: rgba(90, 90, 90, 0.479);
   color:rgb(0, 255, 0);
+  margin-left:auto;
+  margin-right:auto;
+  width:70%;
 }
 #js-form h4{
   background-color: rgba(255, 255, 255, 0.445);
